--- a/.development.env
+++ b/.development.env
@@ -1,5 +1,5 @@
 PORT=7000
-POSTGRES_HOST=localhost
+POSTGRES_HOST=192.168.1.102
 POSTGRES_USER=postgres
 POSTGRES_DB=nest-course
 POSTGRES_PASSWORD=root
