--- a/.development.env
+++ b/.development.env
@@ -1,6 +1,7 @@
 PORT=7000
-POSTGRES_HOST=192.168.1.102
+POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_DB=nest-course
 POSTGRES_PASSWORD=root
 POSTGRES_PORT=5432
+PRIVATE_KEY=secret_key_safasf
