--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/sequelize": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
@@ -35,7 +37,8 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.28.0",
     "sequelize-typescript": "^2.1.5",
-    "swagger-ui-express": "^4.6.0"
+    "swagger-ui-express": "^4.6.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
